[Fix] fix code format and github action script
	modified:   .github/workflows/basic.yml
	modified:   src/lib.rs

--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -18,9 +18,9 @@ jobs:
 
             - name: Run unittest
               run: |
-                Unittesting...
+                echo "Unittesting...""
                 cargo test
-                Unittest Done
+                echo "Unittest Done"
 
     fmt:
         name: Rustfmt
