--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -18,7 +18,7 @@ jobs:
 
             - name: Run unittest
               run: |
-                echo "Unittesting...""
+                echo "Unittesting..."
                 cargo test
                 echo "Unittest Done"
 
