--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["no_std"]
-all = ["no_std"]
+default = [""]
+all = [""]
 no_std = []
 
 [dependencies]
